2006-05-11	Benedikt Meurer <benny@xfce.org>

	* exo-desktop-item-edit/main.c(main): Handle broken Icon values with
	  file extensions properly. Bug #1795.

2006-05-08	Benedikt Meurer <benny@xfce.org>

	* exo/exo-wrap-table.c(exo_wrap_table_layout): Fix typo.

2006-05-07	Benedikt Meurer <benny@xfce.org>

	* exo-desktop-item-edit/main.c: Add hidden command line switch --xid
	  to allow applications to pass a parent window id, so the window
	  manager can properly place the "Create Launcher/Link" window above
	  the parent window.

2006-05-07	Benedikt Meurer <benny@xfce.org>

	* exo-desktop-item-edit/exo-die-icon-button.{c,h}: This wasn't meant
	  to be imported.

2006-05-07	Benedikt Meurer <benny@xfce.org>

	* exo-desktop-item-edit/exo-die-editor.c(exo_die_editor_icon_clicked):
	  Use gtk_file_filter_add_pixbuf_formats().

2006-05-06	Benedikt Meurer <benny@xfce.org>

	* exo-desktop-item-edit/, configure.in.in, Makefile.am: Import the
	  exo-desktop-item-edit utility, used to create/edit .desktop links
	  and launchers. Bug #1724.
	* icons/48x48/: Import fallback icons for the exo-desktop-item-edit
	  utility, required for older icon themes that weren't updated to
	  the icon naming spec yet.
	* po/POTFILES.in: Add new files here.
	* po/libexo-0.3.pot, po/*.po: Updated.
	* po/de.po: Update german translations.
	* NEWS, THANKS: Update NEWS and THANKS.

2006-05-06	Benedikt Meurer <benny@xfce.org>

	* Makefile.am: Add --enable-xml2po to DISTCHECK_CONFIGURE_FLAGS.
	* exo-helper/exo-helper-launcher-dialog.c: Drop the "Help" button from
	  the launcher dialog.
	* Makefile.am, configure.in.in, exo-support/: Import XfceHeading and
	  XfceTitledDialog from libxfcegui4 to use by the tools in this package
	  without readding the dependency on libxfcegui4.
	* exo-helper/Makefile.am, exo-helper/exo-helper-chooser-dialog.c,
	  exo-helper/exo-helper-utils.{c,h}: Use XfceTitledDialog as superclass
	  for ExoHelperChooserDialog.
	* po/libexo-0.3.pot, po/*.po: Updated.