@@ -1,3 +1,10 @@
+2006-05-14	Benedikt Meurer <benny@xfce.org>
+
+	* exo-helper/exo-helper-chooser.c(browse_clicked): Make this consistent
+	  with the command chooser dialog in Thunar and exo-desktop-item-edit.
+	* exo-helper/exo-helper-chooser.c(menu_activate_other): Make spacing
+	  consistent with the message dialogs.
+
 2006-05-11	Benedikt Meurer <benny@xfce.org>
 
 	* exo-desktop-item-edit/main.c(main): Handle broken Icon values with
